everything in index

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello</title>
+    <link rel="stylesheet" type="text/css" href="svg.css">
+
+    <title>svg</title>
 </head>
 <body>
-    <h1>
-        hello
-    </h1>
+   
+
+        <img class="money" src="money.svg"></img>
+        <img class="place" src="places.svg"></img>
+        <img class="birthday" src="birthday.svg"></img>
+        <img class="portrait" src="portrait.svg"> </img>
+        <img class="circle" src="circle_me.svg"> </img>
+        <img class="name" src="name.svg"> </img>
+        <img class="pet" src="pet.svg"> </img>
+        <img class="memory" src="memory.svg"> </img>
+        <img class="add" src="addon.svg"> </img>
+
+   
+
 </body>
 </html>
